Add PhotonEx patent app 20030108265 (polarization multiplexed optical clock)

--- a/engineering.html
+++ b/engineering.html
@@ -153,7 +153,8 @@
     <li><strong>US Patent 11,228,102:</strong> Fragmented Aperture Antennas — advanced fragmented aperture antenna techniques extending the original invention</li>
     <li><strong>US Patent 11,215,655:</strong> Correction of Transmission Line Induced Phase and Amplitude Errors in Reflectivity Measurements</li>
     <li><strong>US Patent 10,203,202:</strong> Non-Contact Determination of Coating Thickness — electromagnetic methods for non-contact RF coating measurement and verification</li>
-    <li><strong>US Patent App. 20030108263:</strong> Polarization Multiplexed Optical Data Modulator — fiber-optic communication technology from PhotonEx Corporation</li>
+    <li><strong>US Patent App. 20030108263:</strong> Polarization Multiplexed Optical Data Modulator — fiber-optic communication (PhotonEx)</li>
+    <li><strong>US Patent App. 20030108265:</strong> Polarization Multiplexed Optical Clock — fiber-optic communication (PhotonEx)</li>
     <li><strong>US Patent 5,689,275:</strong> Electromagnetic Antenna and Transmission Line Utilizing Photonic Bandgap Material</li>
     <li><strong>IEEE AP-S Best Paper Award (1993)</strong> and <strong>Runner-up (1992)</strong> — recognized for outstanding contributions to antenna research</li>
     <li><strong>Book in progress:</strong> <a href="https://jmaloney1965.github.io/fragmented-aperture-book/" target="_blank" rel="noopener"><em>Fragmented Aperture Antennas</em></a> — the definitive reference on the theory, design, and applications of fragmented aperture antenna technology</li>
