Add dr-maloney.html bio page with Schema.org SEO, update nav sitewide

--- a/privacy.html
+++ b/privacy.html
@@ -64,6 +64,7 @@
     </a>   
     <nav class="site-nav">
       <a href="about.html">About</a>
+      <a href="dr-maloney.html">Dr. Maloney</a>
       <a href="services.html">Services</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
