--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
 
     <nav class="site-nav">
       <a href="about.html" class="nav-active">About</a>
+      <a href="dr-maloney.html">Dr. Maloney</a>
       <a href="services.html">Services</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
