--- a/faq.html
+++ b/faq.html
@@ -63,6 +63,7 @@
     </a>
     <nav class="site-nav">
       <a href="about.html">About</a>
+      <a href="dr-maloney.html">Dr. Maloney</a>
       <a href="services.html">Services</a>
       <a href="faq.html" class="nav-active">FAQ</a>
       <a href="contact.html">Contact</a>
