--- a/thanks.html
+++ b/thanks.html
@@ -66,6 +66,7 @@
 
     <nav class="site-nav">
       <a href="about.html">About</a>
+      <a href="dr-maloney.html">Dr. Maloney</a>
       <a href="services.html">Services</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
