Fix PhotonEx location: Bedford, MA not Georgia

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
     </p>
 
     <p>
-      <strong>PhotonEx Corporation (2000–2003):</strong> Led the modeling team at this fiber-optic communications startup, supporting advanced development, product design, and sales. Delivered an invited tutorial lecture at IEEE LEOS 2002 on commercial 40Gb/s long-haul transport solutions.
+      <strong>PhotonEx Corporation (2000–2003):</strong> Led the modeling team at this fiber-optic communications startup in Bedford, Massachusetts, supporting advanced development, product design, and sales. Delivered an invited tutorial lecture at IEEE LEOS 2002 on commercial 40Gb/s long-haul transport solutions.
     </p>
 
     <p>
