--- a/dr-maloney.html
+++ b/dr-maloney.html
@@ -130,7 +130,7 @@
     </p>
 
     <p>
-      <strong>PhotonEx Corporation (2000–2003):</strong> Led the modeling team at this Georgia-based fiber-optic communications startup, supporting advanced development, product design, and sales. Delivered an invited tutorial lecture at IEEE LEOS 2002 on commercial 40Gb/s long-haul transport solutions.
+      <strong>PhotonEx Corporation (2000–2003):</strong> Led the modeling team at this Bedford, Massachusetts-based fiber-optic communications startup, supporting advanced development, product design, and sales. Delivered an invited tutorial lecture at IEEE LEOS 2002 on commercial 40Gb/s long-haul transport solutions.
     </p>
 
     <p>
