Move Dr. Maloney link from nav to footer, keep dr-maloney.html for SEO

--- a/patents.html
+++ b/patents.html
@@ -159,8 +159,8 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="tel:+14047957674">404-795-7674</a><br />
-    <a href="contact.html">Request-Consult</a> |
-    <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+    |
+    <a href="dr-maloney.html">Dr. Maloney</a> | <a href="contact.html">Request-Consult</a> | <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
