--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
 
     <nav class="site-nav">
       <a href="about.html">About</a>
-      <a href="dr-maloney.html">Dr. Maloney</a>
       <a href="services.html">Services</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
@@ -259,8 +258,8 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="tel:+14047957674">404-795-7674</a><br />
-    <a href="contact.html">Request-Consult</a> |
-    <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+    |
+    <a href="dr-maloney.html">Dr. Maloney</a> | <a href="contact.html">Request-Consult</a> | <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
   <div class="site-tagline-footer">
