Add Flat Lens Antenna patent (US 11,937,270) to site

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
     </div>
 
     <p>
-      Dr. James G. Maloney is the inventor of the <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809 &amp; 11,228,102) and a recognized leader in computational electromagnetics and antenna design. His career spans over 25 years across academia, defense, intelligence, and commercial industry.
+      Dr. James G. Maloney is the inventor of the <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809, 11,228,102 &amp; 11,937,270) and a recognized leader in computational electromagnetics and antenna design. His career spans over 25 years across academia, defense, intelligence, and commercial industry.
     </p>
 
     <p>
