--- a/dr-maloney.html
+++ b/dr-maloney.html
@@ -16,13 +16,13 @@
   <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-  <meta name="description" content="Dr. James G. Maloney is the inventor of the Fragmented Aperture Antenna, former Chief Scientist at Georgia Tech Research Institute (GTRI), and Principal Engineer at Marietta Research Solutions. Five US patents, IEEE Best Paper Award, 25+ years in computational electromagnetics." />
+  <meta name="description" content="Dr. James G. Maloney is the inventor of the Fragmented Aperture Antenna, former Chief Scientist at Georgia Tech Research Institute (GTRI), and Principal Engineer at Marietta Research Solutions. Six US patents, IEEE Best Paper Award, 25+ years in computational electromagnetics." />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Dr. James G. Maloney, PhD, MBA — Inventor of Fragmented Aperture Antenna | Georgia Tech | Marietta Research Solutions" />
-  <meta property="og:description" content="Dr. James G. Maloney is the inventor of the Fragmented Aperture Antenna, former Chief Scientist at Georgia Tech Research Institute (GTRI), and Principal Engineer at Marietta Research Solutions. Five US patents, IEEE Best Paper Award, 25+ years in computational electromagnetics." />
+  <meta property="og:description" content="Dr. James G. Maloney is the inventor of the Fragmented Aperture Antenna, former Chief Scientist at Georgia Tech Research Institute (GTRI), and Principal Engineer at Marietta Research Solutions. Six US patents, IEEE Best Paper Award, 25+ years in computational electromagnetics." />
   <meta property="og:type" content="profile" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/dr-maloney.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217"/>
@@ -30,7 +30,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Dr. James G. Maloney, PhD, MBA — Inventor of Fragmented Aperture Antenna | Georgia Tech" />
-  <meta name="twitter:description" content="Dr. James G. Maloney is the inventor of the Fragmented Aperture Antenna, former Chief Scientist at Georgia Tech Research Institute (GTRI), and Principal Engineer at Marietta Research Solutions. Five US patents, IEEE Best Paper Award, 25+ years in computational electromagnetics." />
+  <meta name="twitter:description" content="Dr. James G. Maloney is the inventor of the Fragmented Aperture Antenna, former Chief Scientist at Georgia Tech Research Institute (GTRI), and Principal Engineer at Marietta Research Solutions. Six US patents, IEEE Best Paper Award, 25+ years in computational electromagnetics." />
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png?v=20260217" />
 
   <!-- Schema.org Person structured data -->
@@ -117,7 +117,7 @@
     </div>
 
     <p>
-      Dr. James G. Maloney is a Georgia-based computational electromagnetics expert and the inventor of the <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809 &amp; 11,228,102). With over 25 years of experience spanning academia, defense, intelligence, and commercial industry, Dr. Maloney has established himself as a leading authority in antenna design, FDTD simulation, and RF systems engineering. A triple alumnus of the <strong>Georgia Institute of Technology</strong> (Georgia Tech), he earned his PhD in Electrical Engineering, an MBA, and a Bachelor of Electrical Engineering — all from Georgia Tech in Atlanta, Georgia.
+      Dr. James G. Maloney is a Georgia-based computational electromagnetics expert and the inventor of the <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809 &amp; 11,228,102) and the <strong>Flat Lens Antenna</strong> (US Patent 11,937,270). With over 25 years of experience spanning academia, defense, intelligence, and commercial industry, Dr. Maloney has established himself as a leading authority in antenna design, FDTD simulation, and RF systems engineering. A triple alumnus of the <strong>Georgia Institute of Technology</strong> (Georgia Tech), he earned his PhD in Electrical Engineering, an MBA, and a Bachelor of Electrical Engineering — all from Georgia Tech in Atlanta, Georgia.
     </p>
 
     <p>
@@ -157,6 +157,7 @@
   <h3>US Patents</h3>
   <ul>
     <li><strong>US 6,323,809</strong> — Fragmented Aperture Antennas and Broadband Antenna Ground Planes</li>
+    <li><strong>US 11,937,270</strong> — Flat Lens Antenna (2024)</li>
     <li><strong>US 11,228,102</strong> — Fragmented Aperture Antennas</li>
     <li><strong>US 11,215,655</strong> — Correction of Transmission Line Induced Phase and Amplitude Errors</li>
     <li><strong>US 10,203,202</strong> — Non-Contact Determination of Coating Thickness</li>
