--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <p>
     Marietta Research Solutions delivers advanced computational electromagnetics and antenna design consulting
     rooted in over 30 years of pioneering research. Our principal engineer, Dr. James G. Maloney, invented the
-    <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809 &amp; 11,228,102) and created a proprietary FDTD solver
+    <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809, 11,228,102 &amp; 11,937,270) and created a proprietary FDTD solver
     used across the defense community. From UHF through millimeter wave, we bring world-class expertise in
     full-wave electromagnetic simulation, antenna optimization, and RF systems integration.
   </p>
@@ -195,7 +195,7 @@
     </div>
 
     <p>
-      Inventor of the <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809 &amp; 11,228,102) and a recognized leader in computational electromagnetics and antenna design. His career spans over 25 years across academia, defense, intelligence, and commercial industry — including serving as <strong>Chief Scientist at Georgia Tech Research Institute</strong>, co-founding the engineering practice at Compass Technology Group, and leading the modeling team at PhotonEx Corporation.
+      Inventor of the <strong>Fragmented Aperture Antenna</strong> (US Patents 6,323,809, 11,228,102 &amp; 11,937,270) and a recognized leader in computational electromagnetics and antenna design. His career spans over 25 years across academia, defense, intelligence, and commercial industry — including serving as <strong>Chief Scientist at Georgia Tech Research Institute</strong>, co-founding the engineering practice at Compass Technology Group, and leading the modeling team at PhotonEx Corporation.
     </p>
 
     <p>
