Add Antenna Integration Services page, update capabilities PDF
- New antenna-integration.html: end-to-end antenna integration consulting for IoT/wireless/embedded devices
- New SVG icon for antenna integration service card
- Added service card to services.html grid
- Updated sitemap.xml
- Rebuilt capabilities.pdf: added Antenna Integration Services, Flat Lens patent, 10pt min fonts, separator lines

--- a/services.html
+++ b/services.html
@@ -96,6 +96,15 @@
         </div>
       </a>
 
+      <a class="card-link" href="antenna-integration.html">
+        <div class="service-card">
+          <img class="icon" src="images/icons/antenna-integration.svg" alt="Antenna Integration Icon" />
+          <h3>Antenna Integration Services</h3>
+          <p>Antenna selection, matching network design, simulation, and test plans for IoT, wireless, and embedded devices.</p>
+          <span class="card-cta">Learn more →</span>
+        </div>
+      </a>
+
       <a class="card-link" href="ai.html">
         <div class="service-card">
           <img class="icon" src="images/icons/ai.svg" alt="AI Icon" />
